sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr=getNombreValeurs
  for (i <- 1 to lgr-1) {
    var v=getValeur(i)
    var j=i
    while ((j>0) && (plusPetitQue(v,j-1)) {
      copie(j-1,j)
      j-=1
    }
    setValeur(j,v)
    }
  }
